// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchInput Component SwitchInput renders highlighted 1`] = `
<div>
  <div
    class="container"
  >
    <label
      class="label readOnly"
      for="switch-31"
      tabindex="-1"
    >
      <div
        class="switch"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-checked="false"
          aria-label="Switch label 0"
          class="silver"
          id="switch-31"
          role="checkbox"
        />
      </div>
      Switch label 0
    </label>
    <label
      class="label readOnly"
      for="switch-32"
      tabindex="-1"
    >
      <div
        class="switch"
      >
        <input
          aria-hidden="true"
          checked=""
          readonly=""
          type="checkbox"
        />
        <span
          aria-checked="true"
          aria-label="Switch label 1"
          class="silver"
          id="switch-32"
          role="checkbox"
        />
      </div>
      Switch label 1
    </label>
    <label
      class="label readOnly"
      for="switch-33"
      tabindex="-1"
    >
      <div
        class="switch"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-checked="false"
          aria-label="Switch label 2"
          class="silver"
          id="switch-33"
          role="checkbox"
        />
      </div>
      Switch label 2
    </label>
    <label
      class="label readOnly"
      for="switch-34"
      tabindex="-1"
    >
      <div
        class="switch"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 3"
          class="silver"
          id="switch-34"
          role="checkbox"
        />
      </div>
      Switch label 3
    </label>
    <label
      class="label readOnly highlighted"
      for="switch-35"
      tabindex="-1"
    >
      <div
        class="switch"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 4"
          class="silver"
          id="switch-35"
          role="checkbox"
        />
      </div>
      Switch label 4
    </label>
    <label
      class="label readOnly"
      for="switch-36"
      tabindex="-1"
    >
      <div
        class="switch"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 5"
          class="silver"
          id="switch-36"
          role="checkbox"
        />
      </div>
      Switch label 5
    </label>
  </div>
</div>
`;

exports[`SwitchInput Component SwitchInput renders with input 1`] = `
<div>
  <div
    class="container"
  >
    <label
      class="label"
      for="switch-1"
      tabindex="0"
    >
      <div
        class="switch"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 0"
          class="pebble"
          id="switch-1"
          role="checkbox"
        />
      </div>
      Switch label 0
    </label>
    <label
      class="label"
      for="switch-2"
      tabindex="0"
    >
      <div
        class="switch"
      >
        <input
          aria-hidden="true"
          checked=""
          readonly=""
          type="checkbox"
        />
        <span
          aria-checked="true"
          aria-label="Switch label 1"
          class="primary"
          id="switch-2"
          role="checkbox"
        />
      </div>
      Switch label 1
    </label>
    <label
      class="label"
      for="switch-3"
      tabindex="0"
    >
      <div
        class="switch"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-checked="false"
          aria-label="Switch label 2"
          class="pebble"
          id="switch-3"
          role="checkbox"
        />
      </div>
      Switch label 2
    </label>
    <label
      class="label"
      for="switch-4"
      tabindex="0"
    >
      <div
        class="switch"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 3"
          class="pebble"
          id="switch-4"
          role="checkbox"
        />
      </div>
      Switch label 3
    </label>
    <label
      class="label"
      for="switch-5"
      tabindex="0"
    >
      <div
        class="switch"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 4"
          class="pebble"
          id="switch-5"
          role="checkbox"
        />
      </div>
      Switch label 4
    </label>
    <label
      class="label"
      for="switch-6"
      tabindex="0"
    >
      <div
        class="switch"
      >
        <input
          aria-hidden="true"
          readonly=""
          type="checkbox"
        />
        <span
          aria-label="Switch label 5"
          class="pebble"
          id="switch-6"
          role="checkbox"
        />
      </div>
      Switch label 5
    </label>
  </div>
</div>
`;

exports[`SwitchInput Component SwitchInput renders with no options 1`] = `
<div>
  <div
    class="container"
  />
</div>
`;
